--- a/daq_test/PSD2.conf
+++ b/daq_test/PSD2.conf
@@ -14,12 +14,12 @@ ModID 0
 /ch/0..31/par/GateLongLengthT 400
 /ch/0..31/par/GateShortLengthT 100
 
-# /par/TestPulsePeriod 10000
-# /par/TestPulseWidth 10
+/par/TestPulsePeriod 100000
+/par/TestPulseWidth 10
 # /par/GlobalTriggerSource SwTrg
-# /par/GlobalTriggerSource TestPulse
+/par/GlobalTriggerSource TestPulse
 # /ch/0..31/par/WaveTriggerSource GlobalTriggerSource
-# /ch/0..31/par/EventTriggerSource GlobalTriggerSource
+/ch/0..31/par/EventTriggerSource GlobalTriggerSource
 # /ch/0..31/par/EventTriggerSource ChSelfTrigger
 
 /ch/0..31/par/WaveTriggerSource Disabled
